[gd_scene load_steps=3 format=2]

[ext_resource path="res://Images/Pickups/NitroDrop.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Nitro.gd" type="Script" id=2]

[node name="Nitro" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -150, -22, 0, -82, 76, -88, 135, -50, 151, -1, 131, 52, 88, 84, 0, 82, -150, 27 )

[node name="NitroActionTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_Nitro_body_entered"]
[connection signal="timeout" from="NitroActionTimer" to="." method="_on_NitroActionTimer_timeout"]
